Population and growth tables complete

--- a/_layout/partials/Deseret_population_table.html
+++ b/_layout/partials/Deseret_population_table.html
@@ -21,5 +21,8 @@
     <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Wyoming</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">579,761</td>
     </tr>
+    <tr class="tufte-table tr"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">12,720,090</td>
+    </tr>
   </tbody>
 </table>
