--- a/_layout/partials/New_Sonora_population_table.html
+++ b/_layout/partials/New_Sonora_population_table.html
@@ -21,5 +21,8 @@
     <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">New Mexico</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">2,114,768</td>
     </tr>
+    <tr class="tufte-table tr"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">53,212,363</td>
+    </tr>
   </tbody>
 </table>
