--- a/_layout/partials/Pacifica_population_table.html
+++ b/_layout/partials/Pacifica_population_table.html
@@ -15,5 +15,8 @@
     <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Washington</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">7,740,984</td>
     </tr>
+    <tr class="tufte-table tr"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">12,713,669</td>
+    </tr>
   </tbody>
 </table>
