--- a/_layout/partials/The_Lonestar_Republic_population_table.html
+++ b/_layout/partials/The_Lonestar_Republic_population_table.html
@@ -18,5 +18,8 @@
     <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Texas</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">29,640,343</td>
     </tr>
+    <tr class="tufte-table tr odd-row"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">41,289,279</td>
+    </tr>
   </tbody>
 </table>
