--- a/_layout/partials/Cumberland_population_table.html
+++ b/_layout/partials/Cumberland_population_table.html
@@ -15,5 +15,8 @@
     <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">West Virginia</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,784,462</td>
     </tr>
+    <tr class="tufte-table tr"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">13,281,269</td>
+    </tr>
   </tbody>
 </table>
