--- a/_layout/partials/Factoria_population_table.html
+++ b/_layout/partials/Factoria_population_table.html
@@ -24,5 +24,8 @@
     <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Wisconsin</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">5,892,023</td>
     </tr>
+    <tr class="tufte-table tr odd-row"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">60,214,587</td>
+    </tr>
   </tbody>
 </table>
