--- a/_layout/partials/Heartlandia_population_table.html
+++ b/_layout/partials/Heartlandia_population_table.html
@@ -27,5 +27,8 @@
     <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">South Dakota</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">899,194</td>
     </tr>
+    <tr class="tufte-table tr"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">21,659,884</td>
+    </tr>
   </tbody>
 </table>
