--- a/_layout/partials/New_Dixie_population_table.html
+++ b/_layout/partials/New_Dixie_population_table.html
@@ -24,5 +24,8 @@
     <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">South Carolina</td>
       <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">5,212,774</td>
     </tr>
+    <tr class="tufte-table tr odd-row"><td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56,554,276</td>
+    </tr>
   </tbody>
 </table>
