--- a/__site/css/adjust.css
+++ b/__site/css/adjust.css
@@ -1,185 +1,1 @@
-/* Layout adjustments */
-#layout {
-  display: flex;
-  align-items: flex-start;
-  width: 100%;
-}
-
-span.newthought {
-  font-variant: small-caps;
-  font-size: 1.2em;
-}
-
-.sidenote,
-.marginnote {
-  float: right;
-  clear: right;
-  margin-left: -60%;
-  width: 50%;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 1.1rem;
-  line-height: 1.3;
-  vertical-align: baseline;
-  position: relative;
-}
-
-/* Additional styling needed to properly position the notes */
-.sidenote-number {
-  counter-increment: sidenote-counter;
-}
-
-.sidenote-number:after,
-.sidenote:before {
-  position: relative;
-  vertical-align: baseline;
-}
-
-.sidenote-number:after {
-  content: counter(sidenote-counter);
-  font-size: 0.7em;
-  top: -0.5em;
-  left: 0.1em;
-}
-
-.sidenote:before {
-  content: counter(sidenote-counter) " ";
-  font-size: 0.7em;
-  top: -0.5em;
-}
-
-/* Adjust main content padding to make room for left side notes */
-.franklin-content {
-  padding-left: 30%; /* Increase left padding to make room for notes */
-}
-
-@media (max-width: 760px) {
-  .sidenote,
-  .marginnote {
-    float: none;
-    margin-left: 0;
-    width: 100%;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-  }
-  
-  .franklin-content {
-    padding-left: 6%; /* Return to default mobile padding */
-  }
-}
-/* Menu adjustments */
-#menu {
-  width: 170px;
-  padding-top: 1.5em; /* Match the top margin of h1 */
-  padding-right: 0px; /* Reduce space on the right side of menu */
-  flex-shrink: 0; /* Prevent menu from shrinking */
-}
-
-#menu ul {
-  text-align: left;
-  margin: 0;
-  padding: 0;
-}
-
-#menu ul li {
-  margin: 0 0 10px 0; /* Reduced from 15px to 10px for tighter spacing */
-  padding: 0;
-  list-style: none;
-}
-
-#menu ul li a {
-  color: #111;
-  text-decoration: none;
-  position: relative;
-  padding: 3px 3px; /* Further reduced padding */
-  font-size: 16px; /* Smaller font size */
-  display: block;
-}
-
-#menu ul li a::after {
-  content: "";
-  position: absolute;
-  height: 1px;
-  bottom: 4px;
-  left: 10px;
-  right: 10px;
-  background-color: rgba(17, 17, 17, 0.7);
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-#menu ul li a:hover {
-  text-decoration: none;
-}
-
-#menu ul li a:hover::after {
-  visibility: visible;
-  transform: scaleX(1);
-}
-
-/* Main content area adjustments */
-#main {
-  flex: 0; /* Allow main to fill remaining space */
-  padding-left: 10px; /* Reduce space on the left side of main content */
-  min-width: 0; /* Fix for flexbox text overflow */
-}
-
-/* Make sure franklin-content doesn't have conflicting margins */
-.franklin-content h1 {
-  margin-top: 1.5em; /* Match with menu padding-top */
-}
-
-/* For small screens, stack menu and content */
-@media (max-width: 768px) {
-  #layout {
-    flex-direction: column;
-  }
-  
-  #menu {
-    width: 100%;
-    padding-top: 0;
-    margin-bottom: 1em;
-  }
-  
-  #menu ul li {
-    margin: 0 0 5px 0;
-  }
-  
-  #menu ul li a {
-    padding: 5px;
-  }
-}
-
-/* Table Styling */
-.franklin-content table.tufte-table,
-table.tufte-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0;
-  margin: 1.5em 0;
-}
-
-.franklin-content table.tufte-table th,
-.franklin-content table.tufte-table td,
-table.tufte-table th,
-table.tufte-table td {
-  font-size: 16px !important; /* Fallback font size */
-  font-size: 1rem !important; /* Relative font size */
-  font-size: 100% !important; /* Percentage-based font size */
-  font-size: medium !important; /* Browser default medium size */
-  padding: 0.5em 0.8em;
-  border: none !important;
-  vertical-align: top;
-}
-
-/* Bold Header Text */
-.franklin-content table.tufte-table th,
-table.tufte-table th {
-  font-weight: bold !important;
-}
-/* Styling for Odd Rows */
-table.tufte-table tr.odd-row,
-.franklin-content table.tufte-table tr.odd-row {
-  background-color: #d4ffcc !important; /* Light green background */
-}
+@charset "utf-8"; #layout{display:flex;align-items:flex-start;width:100%}span.newthought{font-variant:small-caps;font-size:1.2em}.sidenote,.marginnote{float:right;clear:right;margin-left:-60%;width:50%;margin-top:0;margin-bottom:0;font-size:1.1rem;line-height:1.3;vertical-align:baseline;position:relative}.sidenote-number{counter-increment:sidenote-counter}.sidenote-number:after,.sidenote:before{position:relative;vertical-align:baseline}.sidenote-number:after{content:counter(sidenote-counter);font-size:.7em;top:-0.5em;left:.1em}.sidenote:before{content:counter(sidenote-counter) " ";font-size:.7em;top:-0.5em}.franklin-content{padding-left:30%}@media (max-width:760px){.sidenote,.marginnote{float:none;margin-left:0;width:100%;margin-top:1rem;margin-bottom:1rem}.franklin-content{padding-left:6%}}#menu{width:170px;padding-top:1.5em;padding-right:0;flex-shrink:0}#menu ul{text-align:left;margin:0;padding:0}#menu ul li{margin:0 0 10px 0;padding:0;list-style:none}#menu ul li a{color:#111;text-decoration:none;position:relative;padding:3px 3px;font-size:16px;display:block}#menu ul li a::after{content:"";position:absolute;height:1px;bottom:4px;left:10px;right:10px;background-color:rgba(17,17,17,0.7);visibility:hidden;transform:scaleX(0);transition:all .3s cubic-bezier(0.175,0.885,0.32,1.275)}#menu ul li a:hover{text-decoration:none}#menu ul li a:hover::after{visibility:visible;transform:scaleX(1)}#main{flex:0;padding-left:10px;min-width:0}.franklin-content h1{margin-top:1.5em}@media (max-width:768px){#layout{flex-direction:column}#menu{width:100%;padding-top:0;margin-bottom:1em}#menu ul li{margin:0 0 5px 0}#menu ul li a{padding:5px}}.franklin-content table.tufte-table,table.tufte-table{width:100%;border-collapse:collapse;border-spacing:0;margin:1.5em 0}.franklin-content table.tufte-table th,.franklin-content table.tufte-table td,table.tufte-table th,table.tufte-table td{font-size:16px !important;font-size:1rem !important;font-size:100% !important;font-size:medium !important;padding:.5em .8em;border:none !important;vertical-align:top}.franklin-content table.tufte-table th,table.tufte-table th{font-weight:bold !important}table.tufte-table tr.odd-row,.franklin-content table.tufte-table tr.odd-row{background-color:#d4ffcc !important}
