working on splitting off counties; got tired

--- a/_layout/style.html
+++ b/_layout/style.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/css/franklin.css">
-<link rel="stylesheet" href="/css/tufte.css">
-<link rel="stylesheet" href="/css/latex.css">
-<link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
-<link rel="icon" href="/assets/favicon.png">
+<link rel="stylesheet" href="{{website_url}}/{{prepath}}/css/franklin.css">
+<link rel="stylesheet" href="{{website_url}}/{{prepath}}/css/tufte.css">
+<link rel="stylesheet" href="{{website_url}}/{{prepath}}/css/latex.css">
+<link rel="stylesheet" href="{{website_url}}/{{prepath}}/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
+<link rel="icon" href="{{website_url}}/{{prepath}}/assets/favicon.png">
